--- a/msvc/AcquisitionBufferLib/AcquisitionBufferLib.vcxproj.filters
+++ b/msvc/AcquisitionBufferLib/AcquisitionBufferLib.vcxproj.filters
@@ -15,13 +15,11 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\include\acquisitionlistener.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\include\acquisitionbuffer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="..\..\lib\acquisitionbuffer.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
   </ItemGroup>
 </Project>
