--- a/msvc/AcquisitionBufferTests/AcquisitionBufferTests.vcxproj
+++ b/msvc/AcquisitionBufferTests/AcquisitionBufferTests.vcxproj
@@ -86,6 +86,8 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories>C:\devtools\boost_1_63_0;</AdditionalIncludeDirectories>
+      <AdditionalOptions>-D_SCL_SECURE_NO_WARNINGS %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -108,6 +110,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories>C:\devtools\boost_1_63_0;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -115,7 +118,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="acquistionbuffertests.cpp" />
+    <ClCompile Include="..\..\tests\acquistionbuffertests.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AcquisitionBufferLib\AcquisitionBufferLib.vcxproj">
